tests/ui/attributes/unsafe/proc-unsafe-attributes.stderr
error: `allow` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:23:3
   |
LL | #[unsafe(allow(dead_code))]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes

error: `allow` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:27:3
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes

error: expected identifier, found keyword `unsafe`
  --> $DIR/proc-unsafe-attributes.rs:27:16
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   |                ^^^^^^ expected identifier, found keyword
   |
help: escape `unsafe` to use it as an identifier
   |
LL | #[unsafe(allow(r#unsafe(dead_code)))]
   |                ++

error[E0565]: malformed `allow` attribute input
  --> $DIR/proc-unsafe-attributes.rs:27:1
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   | ^^^^^^^^^^^^^^^^^^^^^-----------^^^
   |                      |
   |                      didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/diagnostics.html#lint-check-attributes>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1)]
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1, lint2, ...)]
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1, lint2, lint3, reason = "...")]
   |

error: the `#[proc_macro]` attribute is only usable with crates of the `proc-macro` crate type
  --> $DIR/proc-unsafe-attributes.rs:1:1
   |
LL | #[unsafe(proc_macro)]
   | ^^^^^^^^^^^^^^^^^^^^^

error: the `#[proc_macro_derive]` attribute is only usable with crates of the `proc-macro` crate type
  --> $DIR/proc-unsafe-attributes.rs:7:1
   |
LL | #[unsafe(proc_macro_derive(Foo))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the `#[proc_macro_derive]` attribute is only usable with crates of the `proc-macro` crate type
  --> $DIR/proc-unsafe-attributes.rs:12:1
   |
LL | #[proc_macro_derive(unsafe(Foo))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the `#[proc_macro_attribute]` attribute is only usable with crates of the `proc-macro` crate type
  --> $DIR/proc-unsafe-attributes.rs:18:1
   |
LL | #[unsafe(proc_macro_attribute)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `allow` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:23:3
   |
LL | #[unsafe(allow(dead_code))]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `allow` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:27:3
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: expected identifier, found keyword `unsafe`
  --> $DIR/proc-unsafe-attributes.rs:27:16
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   |                ^^^^^^ expected identifier, found keyword
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: escape `unsafe` to use it as an identifier
   |
LL | #[unsafe(allow(r#unsafe(dead_code)))]
   |                ++

error[E0565]: malformed `allow` attribute input
  --> $DIR/proc-unsafe-attributes.rs:27:1
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   | ^^^^^^^^^^^^^^^^^^^^^-----------^^^
   |                      |
   |                      didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/diagnostics.html#lint-check-attributes>
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1)]
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1, lint2, ...)]
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1, lint2, lint3, reason = "...")]
   |

error: `proc_macro` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:1:3
   |
LL | #[unsafe(proc_macro)]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes

error: `proc_macro_derive` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:7:3
   |
LL | #[unsafe(proc_macro_derive(Foo))]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes

error: expected identifier, found keyword `unsafe`
  --> $DIR/proc-unsafe-attributes.rs:12:21
   |
LL | #[proc_macro_derive(unsafe(Foo))]
   |                     ^^^^^^ expected identifier, found keyword
   |
help: escape `unsafe` to use it as an identifier
   |
LL | #[proc_macro_derive(r#unsafe(Foo))]
   |                     ++

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/proc-unsafe-attributes.rs:12:1
   |
LL | #[proc_macro_derive(unsafe(Foo))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
   |                           |
   |                           didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(unsafe(Foo))]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(unsafe(Foo))]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error: `proc_macro_attribute` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:18:3
   |
LL | #[unsafe(proc_macro_attribute)]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes

error: `allow` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:23:3
   |
LL | #[unsafe(allow(dead_code))]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `allow` is not an unsafe attribute
  --> $DIR/proc-unsafe-attributes.rs:27:3
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: expected identifier, found keyword `unsafe`
  --> $DIR/proc-unsafe-attributes.rs:27:16
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   |                ^^^^^^ expected identifier, found keyword
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: escape `unsafe` to use it as an identifier
   |
LL | #[unsafe(allow(r#unsafe(dead_code)))]
   |                ++

error[E0565]: malformed `allow` attribute input
  --> $DIR/proc-unsafe-attributes.rs:27:1
   |
LL | #[unsafe(allow(unsafe(dead_code)))]
   | ^^^^^^^^^^^^^^^^^^^^^-----------^^^
   |                      |
   |                      didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/diagnostics.html#lint-check-attributes>
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1)]
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1, lint2, ...)]
   |
LL - #[unsafe(allow(unsafe(dead_code)))]
LL + #[allow(lint1, lint2, lint3, reason = "...")]
   |

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0565`.
